# FileBox

./: pyproject.toml
apps/auth_app/: backend.py  dto.py  forms.py  urls.py  views.py
apps/content_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/content_app/migrations/: 0001_initial.py  0002_alter_content_options.py
apps/user_app/: admin.py  forms.py  manager.py  models.py
apps/user_app/migrations/: 0001_initial.py  0002_customuser_second_name_alter_customuser_first_name.py
core/: settings.py  urls.py
repositories/: auth_app_repository.py
templates/: index.html  nav-panel.html  navbar.html
templates/auth_app/: login.html  logout.html  signup.html
templates/content_app/: base.html
utils/: exceptions.py
